versioned_docs/version-8.x/seeding.md
<!-- # Database: Seeding -->
# Database: Seeding

- [Introduction](#introduction)
- [Writing Seeders](#writing-seeders)
    - [Using Model Factories](#using-model-factories)
    - [Calling Additional Seeders](#calling-additional-seeders)
- [Running Seeders](#running-seeders)

<a name="introduction"></a>
<!-- ## Introduction -->
## Introduction

<!-- Laravel includes the ability to seed your database with data using seed classes. All seed classes are stored in the `database/seeders` directory. By default, a `DatabaseSeeder` class is defined for you. From this class, you may use the `call` method to run other seed classes, allowing you to control the seeding order. -->
Laravel은 시더 클래스(Seeder Class)를 사용해 데이터베이스에 데이터를 삽입할 수 있도록 지원합니다. 모든 시더 클래스는 `database/seeders` 디렉터리에 보관됩니다. 기본적으로 `DatabaseSeeder`라는 클래스가 미리 정의되어 있습니다. 이 클래스에서 `call` 메서드를 이용해 다른 시더 클래스를 실행할 수 있으며, 이를 통해 데이터 시딩의 실행 순서를 자유롭게 제어할 수 있습니다.

> [!TIP]
> [Mass assignment protection](/docs/8.x/eloquent#mass-assignment)은 데이터베이스 시딩 중에 자동으로 비활성화됩니다.

<a name="writing-seeders"></a>
<!-- ## Writing Seeders -->
## Writing Seeders

<!-- To generate a seeder, execute the `make:seeder` [Artisan command](/docs/8.x/artisan). All seeders generated by the framework will be placed in the `database/seeders` directory: -->
시더를 생성하려면 `make:seeder` [Artisan command](/docs/8.x/artisan)를 실행합니다. 프레임워크로 생성한 모든 시더는 `database/seeders` 디렉터리에 저장됩니다.

```
php artisan make:seeder UserSeeder
```

<!-- A seeder class only contains one method by default: `run`. This method is called when the `db:seed` [Artisan command](/docs/8.x/artisan) is executed. Within the `run` method, you may insert data into your database however you wish. You may use the [query builder](/docs/8.x/queries) to manually insert data or you may use [Eloquent model factories](/docs/8.x/database-testing#defining-model-factories). -->
시더 클래스는 기본적으로 하나의 메서드만 포함합니다: `run`. 이 메서드는 `db:seed` [Artisan command](/docs/8.x/artisan)를 실행할 때 호출됩니다. `run` 메서드 안에서는 자유롭게 데이터베이스에 데이터를 삽입할 수 있습니다. [query builder](/docs/8.x/queries)를 활용하여 직접 데이터를 추가해도 되고, [Eloquent model factories](/docs/8.x/database-testing#defining-model-factories)를 사용할 수도 있습니다.

<!-- As an example, let's modify the default `DatabaseSeeder` class and add a database insert statement to the `run` method: -->
예를 들어, 기본 제공되는 `DatabaseSeeder` 클래스를 수정해 `run` 메서드에 데이터 삽입 구문을 추가해보겠습니다.

```
<?php

namespace Database\Seeders;

use Illuminate\Database\Seeder;
use Illuminate\Support\Facades\DB;
use Illuminate\Support\Facades\Hash;
use Illuminate\Support\Str;

class DatabaseSeeder extends Seeder
{
    /**
     * Run the database seeders.
     *
     * @return void
     */
    public function run()
    {
        DB::table('users')->insert([
            'name' => Str::random(10),
            'email' => Str::random(10).'@gmail.com',
            'password' => Hash::make('password'),
        ]);
    }
}
```

> [!TIP]
> `run` 메서드 시그니처에 필요한 의존성을 타입힌트로 명시할 수 있습니다. 이 경우 Laravel [service container](/docs/8.x/container)를 통해 자동으로 주입됩니다.

<a name="using-model-factories"></a>
<!-- ### Using Model Factories -->
### Using Model Factories

<!-- Of course, manually specifying the attributes for each model seed is cumbersome. Instead, you can use [model factories](/docs/8.x/database-testing#defining-model-factories) to conveniently generate large amounts of database records. First, review the [model factory documentation](/docs/8.x/database-testing#defining-model-factories) to learn how to define your factories. -->
각 모델을 시딩할 때마다 속성을 일일이 지정하는 것은 번거로울 수 있습니다. 이럴 때 [model factories](/docs/8.x/database-testing#defining-model-factories)를 사용하면, 대량의 데이터를 손쉽게 생성할 수 있습니다. 먼저, 팩토리의 정의 방법은 [model factory documentation](/docs/8.x/database-testing#defining-model-factories)를 참고해 팩토리를 만들어 주세요.

<!-- For example, let's create 50 users that each has one related post: -->
예를 들어, 각각 포스트를 하나씩 가진 사용자 50명을 생성해 보겠습니다.

```
use App\Models\User;

/**
 * Run the database seeders.
 *
 * @return void
 */
public function run()
{
    User::factory()
            ->count(50)
            ->hasPosts(1)
            ->create();
}
```

<a name="calling-additional-seeders"></a>
<!-- ### Calling Additional Seeders -->
### Calling Additional Seeders

<!-- Within the `DatabaseSeeder` class, you may use the `call` method to execute additional seed classes. Using the `call` method allows you to break up your database seeding into multiple files so that no single seeder class becomes too large. The `call` method accepts an array of seeder classes that should be executed: -->
`DatabaseSeeder` 클래스 내에서는 `call` 메서드를 사용해 추가적인 시더 클래스를 실행할 수 있습니다. `call`을 활용하면 시더 클래스를 여러 파일로 분리해 관리할 수 있기 때문에, 하나의 시더가 너무 커지는 것을 방지할 수 있습니다. `call` 메서드에는 실행할 시더 클래스의 배열을 전달합니다.

```
/**
 * Run the database seeders.
 *
 * @return void
 */
public function run()
{
    $this->call([
        UserSeeder::class,
        PostSeeder::class,
        CommentSeeder::class,
    ]);
}
```

<a name="running-seeders"></a>
<!-- ## Running Seeders -->
## Running Seeders

<!-- You may execute the `db:seed` Artisan command to seed your database. By default, the `db:seed` command runs the `Database\Seeders\DatabaseSeeder` class, which may in turn invoke other seed classes. However, you may use the `--class` option to specify a specific seeder class to run individually: -->
`db:seed` 아티즌 명령어를 실행하면 데이터베이스에 시딩을 할 수 있습니다. 기본적으로 `db:seed`는 `Database\Seeders\DatabaseSeeder` 클래스를 실행하며, 이 클래스에서 추가적인 시더들을 호출할 수 있습니다. 단일 시더만 독립적으로 실행하고 싶다면 `--class` 옵션을 사용해 특정 시더 클래스를 지정할 수 있습니다.

```
php artisan db:seed

php artisan db:seed --class=UserSeeder
```

<!-- You may also seed your database using the `migrate:fresh` command in combination with the `--seed` option, which will drop all tables and re-run all of your migrations. This command is useful for completely re-building your database: -->
또한, 데이터베이스를 `migrate:fresh`로 초기화하는 동시에 시딩하고 싶다면 `--seed` 옵션을 함께 사용할 수 있습니다. 이 명령어는 모든 테이블을 삭제한 다음, 마이그레이션을 다시 실행하고 데이터를 시딩합니다. 데이터베이스 전체를 재구성할 때 매우 유용합니다.

```
php artisan migrate:fresh --seed
```

<a name="forcing-seeding-production"></a>
<!-- #### Forcing Seeders To Run In Production -->
#### Forcing Seeders To Run In Production

<!-- Some seeding operations may cause you to alter or lose data. In order to protect you from running seeding commands against your production database, you will be prompted for confirmation before the seeders are executed in the `production` environment. To force the seeders to run without a prompt, use the `--force` flag: -->
일부 시딩 작업은 데이터가 변경되거나 유실될 수 있습니다. 이를 방지하기 위해, `production` 환경에서는 시더 실행 전 실행 여부를 한 번 더 확인하도록 되어 있습니다. 별도의 확인 절차 없이 시더를 강제로 실행하고 싶다면 `--force` 플래그를 사용하세요.

```
php artisan db:seed --force
```
